k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fastiride
  labels:
    name: fastiride
